<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackground"
    tools:context=".view.ActorFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:fontFamily="@font/league_spartan_bold"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/placeOfBirthCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/red"
                        app:cardElevation="1dp"
                        android:layout_margin="4dp"
                        app:cardCornerRadius="12dp">

                        <TextView
                            android:id="@+id/placeOfBirthTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:fontFamily="@font/roboto_medium"
                            android:layout_gravity="center"
                            android:textSize="12sp"
                            android:paddingBottom="2dp"
                            android:gravity="center"
                            android:textColor="@color/white"/>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/birthdayCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/red"
                        app:cardElevation="1dp"
                        android:layout_margin="4dp"
                        app:cardCornerRadius="12dp">

                        <TextView
                            android:id="@+id/birthdayTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:fontFamily="@font/roboto_medium"
                            android:layout_gravity="center"
                            android:textSize="12sp"
                            android:paddingBottom="2dp"
                            android:gravity="center"
                            android:textColor="@color/white"/>

                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>
            </HorizontalScrollView>

                <TextView
                    android:id="@+id/biographyHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/biography"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:textSize="14sp"
                    app:trimExpandedText="@string/showLess"
                    app:trimCollapsedText="@string/showMore"
                    app:trimMode="trimModeLength"
                    app:trimLength="400"
                    app:colorClickableText="@color/red"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/starringMovies"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/movieStarringRecyclerView"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_back_icon"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                tools:ignore="ContentDescription" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <include
        android:id="@+id/progressLayout"
        layout="@layout/progress_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>